tests/ui/fail/fn-mismatch-abi-01.stderr
error: encountered mismatch in abi for #[union_fn] method
 --> tests/ui/fail/fn-mismatch-abi-01.rs:6:5
  |
6 |     extern "C" fn bar() {}
  |     ^^^^^^

error: mismatch with this method
 --> tests/ui/fail/fn-mismatch-abi-01.rs:5:5
  |
5 |     fn foo() {}
  |     ^^
